# aiops-agent

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/ops_dashboard/: __init__.py  main.py
automation/ansible/: install-node-exporter.yml  inventory.ini
docs/: central-nginx-secure-ingress.md  operational-slos.md  staging-rollout-runbook.md  target-server-to-central-setup.md
examples/alertmanager/: alertmanager.yml
examples/datadog/: webhook_payload_example.json
examples/prometheus/: prometheus.yml
infra/helm/: Chart.yaml  values.yaml
infra/k8s/: configmap.yaml  deployments.yaml  network-policy.yaml  secret-template.yaml  services.yaml
infra/nginx/: aiops-central.conf  hmac_access.lua
policies/: remediation-policy.yaml
scripts/: send_synthetic_alerts.py  sign_ingest_request.py
services/approval_orchestrator/: __init__.py  main.py
services/audit_log/: main.py
services/common/aiops_common/: __init__.py  audit.py  config.py  detection.py  queue.py  schemas.py
services/correlation_engine/: __init__.py  worker.py
services/ingest_gateway/: __init__.py  adapters.py  main.py
services/recommendation_engine/: __init__.py  worker.py
services/runbook_executor/: __init__.py  worker.py
tests/chaos/: README.md
tests/load/: locustfile.py
tests/unit/: test_correlation_engine.py  test_recommendation_engine.py  test_schema_and_detection.py
