[project]
name = "aiops-agent"
version = "0.1.0"
description = "Self-hosted human-in-the-loop AIOps control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "redis>=6.2.0",
  "httpx>=0.28.0",
  "python-json-logger>=3.3.0",
  "sqlalchemy>=2.0.43",
  "aiosqlite>=0.21.0",
  "slack-sdk>=3.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
